--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Compiled class file
 *.class
 
-# Log file
+i# Log file
 *.log
 
 # BlueJ files
@@ -21,3 +21,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# office file
+*.docx 
+*.doc
